deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: PLACEHOLDER_APP
  namespace: PLACEHOLDER_NAMESPACE
  labels:
    app: PLACEHOLDER_APP
spec:
  selector:
    app: PLACEHOLDER_APP
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
