deploy/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: PLACEHOLDER_APP
  namespace: PLACEHOLDER_NAMESPACE
  labels:
    app: PLACEHOLDER_APP
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`PLACEHOLDER_APP.PLACEHOLDER_CLUSTER_DOMAIN`)
      kind: Rule
      services:
        - name: PLACEHOLDER_APP
          port: 80
  tls:
    certResolver: letsencrypt
